# openfe_analysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: api.rst  conf.py  environment.yaml  index.rst
docs/_ext/: .sass.py.swp
docs/reference/: index.rst
docs/reference/api/: index.rst
src/alibaby/: _version.py  reader.py
src/openfe_analysis/: __init__.py  align_transformation.py  cli.py  handle_trajectories.py  prolif.py  reader.py  rmsd.py  torsions_distributions.py  transformations.py  visualization.py
src/openfe_analysis/tests/: conftest.py  test_prolif.py  test_reader.py  test_rmsd.py  test_rmsd_mda_data.py  test_transformations.py
src/openfe_analysis/tests/utils/: test_multistate.py  test_serialization.py
src/openfe_analysis/utils/: __init__.py  apply_transformations.py  lassoo_highlights.py  multistate.py  serialization.py  universe_transformations.py
src/tests/: test_reader.py
