[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "openfe_analysis"
dynamic = ["version"]
authors=[
    {name="The OpenFE developers", email="openfe@omsf.io"}
]
dependencies = [
    'click',
    'MDAnalysis>=2.8.0',
    'numpy',
    'netCDF4',
    'openff-units',
    'pyyaml',
]
description="Trajectory analysis of free energy calculations."
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
# include = ["openfe_analysis"]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pooch",
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/openfe_analysis"

[project.scripts]
openfe_analysis = "openfe_analysis.cli:cli"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/openfe_analysis/_version.py"
