[build-system]
requires=[
	"setuptools>=64.0",
	"setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "openfe_analysis"
dynamic = ["version"]
authors=[
    {name="The OpenFE developers", email="openfe@omsf.io"}
]
dependencies = [
    'click',
    'MDAnalysis>=2.8.0',
    'numpy',
    'netCDF4',
    'openff-units',
    'pyyaml',
]
description="Trajectory analysis of free energy calculations."
readme="README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/openfe_analysis/_version.py"
fallback_version = "0.0.0"


[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pooch",
]

[project.urls]
"Homepage" = "https://github.com/OpenFreeEnergy/openfe_analysis"

[project.scripts]
openfe_analysis = "openfe_analysis.cli:cli"

[tool.ruff]
line-length = 100

exclude = [
  "*.ipynb", # TODO: auto-format notebooks
]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
    "E", # pycodestyle errors
    "F", # Pyflakes
    "I", # isort
    # "C901"  # TODO: mccabe complexity, add this back in
    # "UP",  # TODO: add this in when we're ready for pyupgrade
    "W",  # pycodestyle warnings
]

lint.ignore = [
    "F401", # TODO: add this back in when we resolve unused imports
]