[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]

[project]
name = "openfe-analysis"
description = "Trajectory analysis of free energy calculations."
readme = "README.md"
authors = [
  { name = "The OpenFE developers", email = "openfe@omsf.io" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dynamic = [ "version" ]
dependencies = [
  "click",
  "mdanalysis>=2.8",
  "netcdf4",
  "numpy",
  "openff-units",
  "pyyaml",
]
optional-dependencies.test = [
  "coverage",
  "pooch",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
urls."Homepage" = "https://github.com/OpenFreeEnergy/openfe_analysis"
scripts.openfe_analysis = "openfe_analysis.cli:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = [ "LICENSE" ]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools_scm]
version_file = "src/openfe_analysis/_version.py"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 100
exclude = [
  "*.ipynb", # TODO: auto-format notebooks
]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
lint.select = [
  "E", # pycodestyle errors
  "F", # Pyflakes
  "I", # isort
  # "C901"  # TODO: mccabe complexity, add this back in
  # "UP",  # TODO: add this in when we're ready for pyupgrade
  "W", # pycodestyle warnings
]

lint.ignore = [
  "F401", # TODO: add this back in when we resolve unused imports
]
